test/classes/errors/nilability-assign/assign-nonnil-shared-from-oknil-nil.good
assign-nonnil-shared-from-oknil-nil.chpl:10: error: done
